--- a/symfonyapp/templates/base.html.twig
+++ b/symfonyapp/templates/base.html.twig
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Contact!{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        
+        <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+	    <link rel="stylesheet"  href="font-awesome/css/font-awesome.min.css">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
