--- a/symfonyapp/templates/email/email.html.twig
+++ b/symfonyapp/templates/email/email.html.twig
@@ -5,9 +5,9 @@
     <div class="row align-self-center">
         <div class="col-12">
                 <h2>Nouveau Message Pour Votre Département </h2>
-                <p><strong> Message venant de :</strong>  {{contact.nom}} </p>
-                <p><strong> Message venant de :</strong> {{contact.mail}} </p>
-                <p>Message : {{contact.message}} </p>
+                <p><strong> Message venant de :</strong>  {{contact.nom}} {{contact.prenom}}</p>
+                <p><strong> Message venant de l'Email :</strong> {{contact.mail}} </p>
+                <p><strong>Message :</strong> {{contact.message}} </p>
         </div>
     </div>
 </div>
